--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,6 +3,12 @@ $color__primary--jet-grey: #353535;
 $color__primary--myrtle-green: #3C6E71;
 $color__primary--gainsboro-grey: #D9D9D9;
 
+$color__social--facebook: #3B5998;
+$color__social--twitter: #55ACEE;
+$color__social--google-plus: #DD4B39;
+$color__social--linkedin: #007BB5;
+$color__social--instagram: #125688;
+
 $box-shadow-sm: 0px 4px 4px rgba(0,0,0,0.25);
 $box-shadow-md: 0px 4px 15px rgba(0,0,0,0.25);
 $box-shadow-lg: 0px 6px 20px rgba(0,0,0,0.25);
@@ -75,8 +81,8 @@ hr {
     .logo {
         background-image: url('../img/affinity-letter.png');
         background-size: cover;
-        width: 175px;
-        height: 175px;
+        width: 135px;
+        height: 135px;
         margin: 0 auto;
     }
     .content {
@@ -85,7 +91,7 @@ hr {
         margin-top: -80px;
     }
     .title {
-        font-size: 65px;
+        font-size: 55px;
         font-family: 'Poppins';
         font-weight: bold;
         letter-spacing: 4px;
@@ -93,7 +99,7 @@ hr {
         margin-bottom: 0;
     }
     .lead {
-        font-size: 17px;
+        font-size: 15px;
         font-style: italic;
         font-weight: 400;
         padding: 0;
@@ -117,12 +123,55 @@ hr {
     }
 }
 
+.social-fixed {
+    position: fixed;
+    left: 0;
+    top: 30%;
+    z-index: 100;
+    color: white;
+    display: none;
+    .social-icons {
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+    }
+    .icon {
+        width: 50px;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 18px;
+        cursor: pointer;
+        &:hover {
+            background-color: $color__primary--jet-grey;
+        }
+    }
+    .facebook {
+        background-color: $color__social--facebook;
+    }
+    .twitter {
+        background-color: $color__social--twitter;
+    }
+    .google-plus {
+        background-color: $color__social--google-plus;
+    }
+    .linkedin {
+        background-color: $color__social--linkedin;
+    }
+    .instagram {
+        background-color: $color__social--instagram;
+    }
+}
+
 .gallery {
     padding: 40px 0 20px 0;
     .title {
         font-size: 24px;
         font-weight: bold;
+        font-family: 'Poppins';
         padding-bottom: 20px;
+        text-transform: uppercase;
     }
     .image-wrap {
         padding: 14px;
@@ -131,6 +180,7 @@ hr {
         height: 240px;
         box-shadow: $box-shadow-md;
         border-radius: 3px;
+        cursor: pointer;
     }
     img {
         border-radius: 3px;
@@ -145,6 +195,7 @@ hr {
         font-family: 'Poppins';
         font-weight: bold;
         padding-bottom: 20px;
+        text-transform: uppercase;
     }
     .lead {
         font-size: 15px;
@@ -153,13 +204,13 @@ hr {
         padding: 9px;
     }
     .btn {
-        background: transparent;
-        border: 1px solid #555;
+        background: $color__primary--myrtle-green;
+        border: none;
         border-radius: 1px;
         font-size: 12px;
         padding-left: 15px;
         padding-right: 15px;
-        color: #555;
+        color: white;
         font-weight: 500;
         margin-top: 10px;
     }
@@ -167,7 +218,7 @@ hr {
 
 .contact {
     text-align: center;
-    padding: 70px 10px 40px 10px;
+    padding: 70px 10px 30px 10px;
     text-align: center;
     .content {
         padding-bottom: 40px;
@@ -176,6 +227,7 @@ hr {
         font-family: 'Poppins';
         font-weight: bold;
         font-size: 24px;
+        text-transform: uppercase;
     }
     .lead {
         font-size: 15px;
@@ -191,15 +243,25 @@ hr {
     }
     input {
         border: none;
-        border-bottom: 1px solid #aaa;
+        border-bottom: 1px solid #bbb;
     }
     textarea {
-        border: 1px solid #aaa;
+        border: 1px solid #bbb;
         margin-top: 20px;
     }
     .disclaimer {
         font-size: 14px;
-        padding-top: 20px;
+        padding-top: 40px;
+    }
+    .btn {
+        background: $color__primary--myrtle-green;
+        border: 1px solid white;
+        border-radius: 3px;
+        font-size: 12px;
+        padding: 11px 35px;
+        color: white;
+        font-weight: 500;
+        margin-top: 10px;
     }
 }
 
@@ -215,6 +277,8 @@ hr {
         margin: 10px;
         font-size: 25px;
         display: inline-block;
+        color: $color__primary--slate-blue;
+        cursor: pointer;
     }
     .disclaimer {
         font-size: 12px;
@@ -235,6 +299,10 @@ hr {
 }
 
 @media (min-width: $bp-lg) {
+    hr {
+        width: 82%;
+    }
+    
     .masthead {
         .nav-link {
             color: white;
@@ -243,9 +311,15 @@ hr {
                 content: '/';
                 padding-left: 14px;
             }
-            &:hover {
-                opacity: .8;
-            }
+        }
+        .last-nav::after {
+            display: none;
+        }
+        .nav-link:hover::after {
+            color: white;
+        }
+        .nav-link:hover {
+            color: #ccc;
         }
     }
 
@@ -253,15 +327,15 @@ hr {
         background-attachment: fixed;
         background-position: center center;
         .logo {
-            width: 240px;
-            height: 240px;
+            width: 175px;
+            height: 175px;
         }
         .title {
-            font-size: 100px;
+            font-size: 77px;
             letter-spacing: 10px;
         }
         .lead {
-            font-size: 22px;
+            font-size: 20px;
         }
         .phone {
             text-align: right;
@@ -273,13 +347,99 @@ hr {
             display: block;
             font-weight: 500;
             font-size: 16px;
+        }  
+    }
+
+    .social-fixed {
+        display: block;
+    }
+
+    .feature {
+        padding: 100px 0;
+        text-align: left;
+        .container {
+            padding-left: 90px;
+            padding-right: 90px;
         }
-        
+        .title {
+            font-size: 42px;
+        }
+        .lead {
+            font-size: 20px;
+            padding: 0;
+            line-height: 65px;
+        }
+        .btn {
+            margin-top: 30px;
+            padding: 9px 25px;
+            font-size: 13px;
+            font-weight: 500;
+            cursor: pointer;
+            &:hover {
+                opacity: .9;
+            }
+        }
     }
 
     .gallery {
+        padding: 60px 0 40px 0;
+        .title {
+            font-size: 40px;
+            margin-bottom: 40px;
+        }
         .image {
             height: 350px;
         }
     }
+
+    .contact {
+        padding-top: 100px;
+        .container {
+            padding-left: 90px;
+            padding-right: 90px;
+            position: relative;
+        }
+        .content {
+            padding-bottom: 80px;
+        }
+        .title {
+            font-size: 42px;
+        }
+        .lead {
+            font-size: 20px;
+        }
+        label {
+            padding-top: 30px;
+            font-size: 14px;
+        }
+        textarea {
+            height: 200px;
+        }
+        .btn {
+            position: absolute;
+            left: 90px;
+            cursor: pointer;
+            &:hover {
+                opacity: .9;
+            }
+        }
+        .disclaimer {
+            margin-top: 100px;
+            font-size: 15px;
+        }
+    }
+
+    .mastfoot {
+        .icon {
+            font-size: 40px;
+            margin: 20px;
+            &:hover {
+                opacity: .8;
+            }
+        }
+        .disclaimer {
+            font-size: 14px;
+        }
+    }
+
 }
