--- a/sass/style.scss
+++ b/sass/style.scss
@@ -65,10 +65,8 @@ hr {
 .showcase {
     width: 100%;
     height: 100%;
-    background-image: url('../img/startup.jpg');
-    background-size: cover;
-    background-position: right -110px top;
-    background-repeat: no-repeat;
+    position: relative;
+    overflow: hidden;
     .overlay {
         position: absolute;
         top: 0;
@@ -76,7 +74,7 @@ hr {
         right: 0;
         bottom: 0;
         background-color: $color__primary--slate-blue;
-        opacity: .9;
+        opacity: .7;
     }
     .logo {
         background-image: url('../img/affinity-letter.png');
@@ -100,10 +98,18 @@ hr {
     }
     .lead {
         font-size: 15px;
-        font-style: italic;
         font-weight: 400;
         padding: 0;
         margin: 0;
+    }
+    .arrow-icon {
+        position: absolute;
+        bottom: 0;
+        color: white;
+        font-size: 42px;
+        opacity: .8;
+        margin-bottom: -10px;
+        display: none;
     }
     .phone, .email {
         position: absolute;
@@ -120,6 +126,16 @@ hr {
     }
     .email {
         display: none;
+    }
+    video {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        min-width: 100%;
+        min-height: 100%;
+        width: auto;
+        height: auto;
     }
 }
 
@@ -347,6 +363,9 @@ hr {
             display: block;
             font-weight: 500;
             font-size: 16px;
+        }
+        .arrow-icon {
+            display: block;
         }  
     }
 
