--- a/sass/style.scss
+++ b/sass/style.scss
@@ -39,6 +39,11 @@ img {
     min-width: 100%;
 }
 
+a, a:hover, a:visited {
+    color: inherit;
+    text-decoration: none;
+}
+
 hr {
     width: 90%;
 }
@@ -59,6 +64,9 @@ hr {
         width: 40px;
         height: 40px;
         margin-top: 5px;
+    }
+    .nav-link {
+        color: #5BC0EB;
     }
 }
 
@@ -182,6 +190,7 @@ hr {
 
 .gallery {
     padding: 40px 0 20px 0;
+    display: none;
     .title {
         font-size: 24px;
         font-weight: bold;
@@ -207,7 +216,7 @@ hr {
     padding: 70px 0;
     text-align: center;
     .title {
-        font-size: 24px;
+        font-size: 20px;
         font-family: 'Poppins';
         font-weight: bold;
         padding-bottom: 20px;
@@ -219,6 +228,15 @@ hr {
         line-height: 40px;
         padding: 9px;
     }
+    .pitch {
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+    }
+    .bullet {
+        text-align: left;
+        padding: 0 0 20px 30px;
+    }
     .btn {
         background: $color__primary--myrtle-green;
         border: none;
@@ -229,6 +247,13 @@ hr {
         color: white;
         font-weight: 500;
         margin-top: 10px;
+    }
+}
+
+.feature4 {
+    .title {
+        margin-bottom: 5px;
+        padding-bottom: 0;
     }
 }
 
@@ -308,6 +333,7 @@ hr {
 
 @media (min-width: $bp-md) {
     .gallery {
+        display: none;
         .image {
             height: 400px;
         }
@@ -347,7 +373,7 @@ hr {
             height: 275px;
         }
         .title {
-            font-size: 77px;
+            font-size: 60px;
             letter-spacing: 10px;
         }
         .lead {
@@ -388,6 +414,21 @@ hr {
             padding: 0;
             line-height: 65px;
         }
+        .pitch {
+            padding: 0;
+            margin: 0;
+            list-style-position: inside;
+            list-style-type: disc;
+        }
+        .bullet {
+            font-size: 20px;
+            margin: 50px 0;
+            padding: 0;
+            line-height: 0;
+        }
+        br {
+            display: none;
+        }
         .btn {
             margin-top: 30px;
             padding: 9px 25px;
@@ -400,8 +441,15 @@ hr {
         }
     }
 
+    .feature4 {
+        .lead {
+            line-height: 50px;
+        }
+    }
+
     .gallery {
         padding: 60px 0 40px 0;
+        display: none;
         .title {
             font-size: 40px;
             margin-bottom: 40px;
