Feature desktop responsive

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -442,6 +442,9 @@ hr {
     }
 
     .feature4 {
+        .title {
+            padding-bottom: 30px;
+        }
         .lead {
             line-height: 50px;
         }
