--- a/sass/style.scss
+++ b/sass/style.scss
@@ -487,7 +487,7 @@ hr {
 
 .mastfoot {
     padding-top: 10px;
-    background-image: url('../img/affinity-pattern.png');
+    background-image: url('../img/affinity-pattern.jpg');
     background-size: cover;
     background-attachment: fixed;
     position: relative;
